--- a/cryptocurrency/src/components/modules/Form/style.module.scss
+++ b/cryptocurrency/src/components/modules/Form/style.module.scss
@@ -1,7 +1,10 @@
 .form{
 	display: flex;
 	flex-direction: column;
-	:first-child{
+	&>*{
 		margin-bottom: 20px;
+	}
+	&:last-child{
+		margin-bottom: 0;
 	}
 }
