--- a/cryptocurrency/src/components/modules/Header/style.module.scss
+++ b/cryptocurrency/src/components/modules/Header/style.module.scss
@@ -7,7 +7,12 @@
 	margin-bottom: 50px;
 	
 	@media (max-width: 480px){
-		height: 70px;
+		height: 120px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: 20px;
 	}
 }
 
@@ -18,5 +23,9 @@
 		@media (max-width: 480px){
 			margin-right: 10px;
 		}
+	}
+
+	@media (max-width: 480px){
+		margin-bottom: 10px;
 	}
 }
