--- a/cryptocurrency/src/components/ui/button/AddButton/style.module.scss
+++ b/cryptocurrency/src/components/ui/button/AddButton/style.module.scss
@@ -1,5 +1,9 @@
 .button{
-	padding: 0px 10px;
+	padding: 5px 15px;
 	background: #aea4e3;
 	color: white;
+
+	&:hover{
+		background: #a99de4;
+	}
 }
