--- a/cryptocurrency/src/components/modules/Header/style.module.scss
+++ b/cryptocurrency/src/components/modules/Header/style.module.scss
@@ -10,9 +10,18 @@
 		height: 120px;
 		display: flex;
 		flex-direction: column;
-		align-items: center;
+		align-items: flex-start;
 		justify-content: center;
 		margin-bottom: 20px;
+	}
+}
+
+.col{
+	display: flex;
+	align-items: center;
+	
+	@media (max-width: 480px){
+		margin-bottom: 10px;
 	}
 }
 
@@ -25,7 +34,11 @@
 		}
 	}
 
-	@media (max-width: 480px){
-		margin-bottom: 10px;
-	}
+}
+
+.home{
+	width: 40px;
+	height: 40px;
+	color: rgb(255, 255, 255, .8);
+	margin-right: 20px;
 }
