--- a/cryptocurrency/src/index.scss
+++ b/cryptocurrency/src/index.scss
@@ -41,9 +41,9 @@ li{list-style-type: none;}
 .wrapper{
 	max-width: 1500px;
 	width: 100%;
-	padding: 0 20px;
+	padding: 20px ;
 	@media (max-width: 480px){
-		padding: 0 10px;
+		padding: 10px;
 	}
 }
 
